@@ -19,6 +19,10 @@ Version 0.6.7                               "I said 'Step pause turn
            ListUpdate was too coarse to suit download_update_manager
            properly even though it more-or-less worked.
 
+  * [all]: Do not call debtags on list update.  This was a rather
+           unsightly kludge is better suited as a script for
+           APT::Update::Post-Invoke.
+
 - Cosmetic and UI bugs:
 
   * [curses]: Apply patch from Ubuntu: don't mention 'su' in 'Become
